Adding Covered Test with Circle CI