@@ -213,11 +213,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.4</version>
 
-        <configuration>
-            <argLine>
-                --illegal-access=permit
-            </argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--            <argLine>-->
+<!--                &#45;&#45;illegal-access=permit-->
+<!--            </argLine>-->
+<!--        </configuration>-->
 
     </plugin>
 
@@ -225,11 +225,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.22.2</version>
-        <configuration>
-            <argLine>
-                --illegal-access=permit
-            </argLine>
-        </configuration>
+<!--        <configuration>-->
+<!--            <argLine>-->
+<!--                &#45;&#45;illegal-access=permit-->
+<!--            </argLine>-->
+<!--        </configuration>-->
 
         <executions>
             <execution>
